--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="total">Total: %s</string>
     <string name="tip_per_payer">Tip per payer: %s</string>
     <string name="total_per_payer">Total per payer: %s</string>
+    <string name="number_of_payer">Number of payers</string>
 </resources>
